# lets-get-rusty

./: .gitignore
01-basic/04-Structure projects/01-my_package/: readme.md
01-basic/04-Structure projects/02-modules/: Cargo.toml  readme.md
01-basic/04-Structure projects/05-publish/: Cargo.toml
01-basic/05-larger_projects/01-features/: Cargo.toml
01-basic/05-larger_projects/01-features/src/: lib.rs
01-basic/05-larger_projects/02-workspaces/: Cargo.toml
01-basic/06-tests_and_documents/01-unit_tests/: Cargo.toml
01-basic/06-tests_and_documents/04-benchmark/: Cargo.toml
02-intermediate/01-polimorphism_generics_traits/04-supertraits/: Cargo.toml
02-intermediate/01-polimorphism_generics_traits/05-trait_objects/: README.md
02-intermediate/01-polimorphism_generics_traits/06-deriving_traits/: Cargo.toml
02-intermediate/01-polimorphism_generics_traits/07-orphan_rule/: Cargo.toml
02-intermediate/02-advanced_memory_management/01-concrete_lifetimes/: Cargo.toml
02-intermediate/02-advanced_memory_management/02-generic_lifetimes/: Cargo.toml
02-intermediate/02-advanced_memory_management/03-structs_and_lifetime_elision/: Cargo.toml
02-intermediate/02-advanced_memory_management/05-rc_smart_pointer/: Cargo.toml
02-intermediate/02-advanced_memory_management/06-refcell_smart_pointer/: Cargo.toml
02-intermediate/02-advanced_memory_management/07-deref_coercion/: Cargo.toml
02-intermediate/03-error_handling/01-unrecoverable_errors/: Cargo.toml
02-intermediate/03-error_handling/02-recoverable_errors/: Cargo.toml
(+54 files in other folders)
